# webchanges

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
debian/: .gitignore  changelog  control  copyright  docs  gwebchanges.install  rules  webchanges.install  webchanges.manpages
doc/: Makefile.am  Makefile.in  README.firefox  README.mingw  wc1.dtd  webchanges.1
solaris/: .gitignore  Makefile.am  makepkg.sh  makepkg.sh.in  pkginfo  pkginfo.in  prototype
src/: .gitignore  Makefile.am  Makefile.in  basedir.c  basedir.h  config.h.in  evalxpath.c  global.h  gmain-res.rc.in  gmain.cc  gmain.h  gmain16.xpm  gmain32.xpm  gmain48.xpm  main.c  metafile.c  metafile.h  monfile.c  monfile.h  monfile_dtd.inc  monitor.c  monitor.h  sha1.c  sha1.h  vpair.c  vpair.h
