## Makefile.am -- Process this file with automake to produce Makefile.in

EXTRA_DIST = solaris/makepkg.sh solaris/pkginfo solaris/prototype \
	debian/changelog debian/compat debian/control debian/copyright debian/docs debian/rules \
	debian/gwebchanges.install debian/webchanges.install debian/webchanges.manpages

SUBDIRS = src doc
