dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT(src/main.c)
AC_SUBST(VERSION, "0.7.2")
AC_CONFIG_SRCDIR(src/main.c)
AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile])
AC_CONFIG_FILES([solaris/makepkg.sh solaris/pkginfo], [chmod +x solaris/makepkg.sh])

AM_INIT_AUTOMAKE(webchanges, $VERSION)
AM_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_LANG_C
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(getopt.h errno.h string.h time.h sys/stat.h)

dnl Checks for library functions.

dnl Checks for libraries.
AM_PATH_XML2(2.6.0,,AC_MSG_ERROR([*** libxml2 and libxml2-dev >=2.6.0 are required to build webchanges ***]))

dnl [OPTION] SHOW_HTML_ERRORS
AC_ARG_ENABLE(htmlerr, AC_HELP_STRING([--enable-html-errors], [Show HTML-errors]), if test $enableval = yes; then AC_DEFINE([SHOW_HTML_ERRORS], [], [Show HTML-errors]) fi)


AC_OUTPUT
